# claude-plugin-team-bucciarati

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json  skills.txt
agents/: aerosmith.md  gold-experience.md  moody-blues.md  purple-haze.md  sex-pistols.md  spice-girl.md  sticky-fingers.md
commands/: dispatch.md
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
scripts/: detect-ci.sh
skills/improve/: SKILL.md
skills/team-bucciarati/: SKILL.md
skills/team-bucciarati/reference/: hooks.md  mcp-tools.md  pipelines.md  stand-context.md  stand-params.md  worker-conventions.md
